src/scss/_section.scss
.section {
  padding: $space-xl $space-lg;
  &--middle {
    padding-top: $space-xxl;
    padding-bottom: ($space-xl * 7);
    background-color: $bg-mid;
    clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
    @media (min-width: 50em) {
      padding-bottom: $space-xxl;
    }
  }
  @media (min-width: 30em) {
    padding-left: $space-xl;
    padding-right: $space-xl;
  }
  &--contact {
    background-color: $primary;
  }
  &__container {
    max-width: 60em;
    margin: 0 auto;
    &--small {
      max-width: 32em;
    }
  }
  &__title {
    position: relative;
    text-align: left;
    // line-height: 1;
    // Create the little gold divider
    & + p {
      margin-top: $space-lg;
    }
    &:after {
      content: '';
      position: absolute;
      left: 0;
      // Get it the right distance from the title
      bottom: ($space-md * -0.7);
      width: $space-lg;
      height: 5px;
      background-color: $primary;
    }
  }
  &__copy {
    text-align: left;
  }
}

